--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -383,8 +383,8 @@
                 </div> 
           </div>
 
-      <div id="pdfTable" #pdfTable>
-        <table class="table table-hover table-striped table-responsive"   >
+      <div class="anyClass" id="pdfTable" #pdfTable>
+        <table class="table table-hover table-striped">
           <thead >
             <tr class="EncTabla" >
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;" >TP</th><!--Pedido codigo -->
@@ -414,7 +414,8 @@
           <tbody>
             <ng-container *ngFor="let relPed of oRelacionPedRes.Contenido | searchrelacionpedidos: searchtext ">
               <tr class="table-info">
-                <td *ngIf="!bCliente" ? colspan="14" :colspan="18">{{relPed.OficinaFonelliNombre}}</td>
+                <!-- <td *ngIf="!bCliente" ? colspan="14" :colspan="18">{{relPed.OficinaFonelliNombre}}</td> -->
+                <td colspan="14">{{relPed.OficinaFonelliNombre}}</td> 
               </tr>
             <ng-container *ngFor="let tipoPed of relPed.TipoPedido;">
 
@@ -543,7 +544,8 @@
 
 
  <!--Modal pedidos detalle-->
- <ng-template #PedidoDetalle let-modal>
+ 
+ <ng-template #PedidoDetalle let-modal >
   <div class="modal-header">
     
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
@@ -559,6 +561,9 @@
               <label > Pedido: <strong>{{oBuscaDetalle.PedidoFolio}}</strong> </label>
             </div>
 
+            <div *ngIf="!bBanderaDet">
+              <p class="alert alert-danger" role="alert">{{sMensajeModal}}</p>
+            </div>
 
                 <div class="col-12">                     
                   <table *ngIf="bBanderaDet"  class="table table-striped">
