--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -238,8 +238,8 @@
                           required
                         >
                           <ng-container *ngFor='let dato of oSubCatDesde;' >
-                            <option value="{{dato.CategoriaCodigo}}">
-                              {{dato.CategoriaCodigo}} - {{dato.CategoriaDescripc}}
+                            <option value="{{dato.Subcategoria}}">
+                              {{dato.CategoriaCodigo+dato.Subcategoria}} - {{dato.CategoriaDescripc}}
                             </option>
                           </ng-container>
 
@@ -276,8 +276,8 @@
                       required
                     >
                     <ng-container *ngFor='let dato of oSubCatHasta;' >
-                      <option value="{{dato.CategoriaCodigo}}">
-                        {{dato.CategoriaCodigo}} - {{dato.CategoriaDescripc}}
+                      <option value="{{dato.Subcategoria}}">
+                        {{dato.CategoriaCodigo+dato.Subcategoria}} - {{dato.CategoriaDescripc}}
                       </option>
                     </ng-container>
                                             
