--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -104,8 +104,8 @@
               <th class="table-warning" scope="col"></th>
               <th class="table-warning" scope="col"></th>
               <th class="table-warning" scope="col"></th>
-              <th class="table-warning" scope="col" colspan="3" style="text-align:center; color: #24a4cc;">SALDO TOTAL</th>  
-              <th class="table-success" scope="col" colspan="3" style="text-align:center; color: #24a4cc;">SALDO VENCIDO</th>
+              <th class="table-warning" scope="col" [attr.colspan]="sColSaldo" style="text-align:center; color: #24a4cc;">SALDO TOTAL</th>  
+              <th class="table-success" scope="col" [attr.colspan]="sColVencido" style="text-align:center; color: #24a4cc;">SALDO VENCIDO</th>
               <th colspan="2" style="text-align:center; background-color:#24a4cc;"></th>
 
             </tr>
@@ -117,12 +117,18 @@
             <th style="background-color: #24a4cc; color: white;" scope="col">L1</th>
             <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">L2</th>
             <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">PLAZO</th>
-            <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
-            <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
-            <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
-            <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
-            <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
-            <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
+            <th *ngIf="bBanCtaCorrMN_SAL" style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
+            <th *ngIf="bBanCtaCorrORO_SAL" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
+            <th *ngIf="bBanCtaCorrDLLS_SAL"style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
+            <th *ngIf="bBanCtaDocMN_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
+            <th *ngIf="bBanCtaDocORO_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
+            <th *ngIf="bBanCtaDocDLLS_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
+            <th *ngIf="bBanCtaCorrMN_VEN" style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
+            <th *ngIf="bBanCtaCorrORO_VEN" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
+            <th *ngIf="bBanCtaCorrDLLS_VEN" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
+            <th *ngIf="bBanCtaDocMN_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
+            <th *ngIf="bBanCtaDocORO_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
+            <th *ngIf="bBanCtaDocDLLS_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
             <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">DÍAS</th>
             <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">PED</th>
           </tr>
@@ -137,12 +143,18 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td *ngIf="bBanCtaCorrMN_SAL"></td>
+                <td *ngIf="bBanCtaCorrORO_SAL"></td>
+                <td *ngIf="bBanCtaCorrDLLS_SAL"></td>
+                <td *ngIf="bBanCtaDocMN_SAL"></td>            
+                <td *ngIf="bBanCtaDocORO_SAL"></td>            
+                <td *ngIf="bBanCtaDocDLLS_SAL"></td>            
+                <td *ngIf="bBanCtaCorrMN_VEN"></td>
+                <td *ngIf="bBanCtaCorrORO_VEN"></td>
+                <td *ngIf="bBanCtaCorrDLLS_VEN"></td>
+                <td *ngIf="bBanCtaDocMN_VEN"></td>            
+                <td *ngIf="bBanCtaDocORO_VEN"></td>            
+                <td *ngIf="bBanCtaDocDLLS_VEN"></td> 
                 <td></td>
                 <td></td>
               </tr>
@@ -157,13 +169,19 @@
                 <td class="FilasFonelli" style="text-align:left">{{ cli.Lista2}}</td>
                 <td class="FilasFonelli" style="text-align:left">{{ cli.Plazo}}</td>               
     
-                  <td class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'1'))}}</td>
-                  <td class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'2'))}}</td>
-                  <td class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'6'))}}</td>
+                <td *ngIf="bBanCtaCorrMN_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'1'))}}</td>
+                <td *ngIf="bBanCtaCorrORO_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'2'))}}</td>
+                <td *ngIf="bBanCtaCorrDLLS_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'3'))}}</td>
+                <td *ngIf="bBanCtaDocMN_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'6'))}}</td>
+                <td *ngIf="bBanCtaDocORO_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'7'))}}</td>
+                <td *ngIf="bBanCtaDocDLLS_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'8'))}}</td>
 
-                  <td class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'1'))}}</td>
-                  <td class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'2'))}}</td>
-                  <td class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'6'))}}</td> 
+                <td *ngIf="bBanCtaCorrMN_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'1'))}}</td>
+                <td *ngIf="bBanCtaCorrORO_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'2'))}}</td>
+                <td *ngIf="bBanCtaCorrDLLS_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'3'))}}</td>
+                <td *ngIf="bBanCtaDocMN_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'6'))}}</td> 
+                <td *ngIf="bBanCtaDocORO_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'7'))}}</td> 
+                <td *ngIf="bBanCtaDocDLLS_VEN" class="table-success FilasFonelli" style="text-align:right">{{ formatoMoneda(getSaldosCartera(cli.SaldosCarteraCliente,'8'))}}</td> 
        
                 <td class="FilasFonelli" style="text-align:right">{{ cli.DiasAtraso}}</td>
                 <td class="FilasFonelli" style="text-align:left">{{ cli.PedidosActivos}}</td>
@@ -179,13 +197,19 @@
                 <td></td>
                 <td class="FilasFonBold" style="text-align:right">Total agente</td>               
     
-                  <td class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'1'))}}</td>
-                  <td class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'2'))}}</td>
-                  <td class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'6'))}}</td>
+                <td *ngIf="bBanCtaCorrMN_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'1'))}}</td>
+                <td *ngIf="bBanCtaCorrORO_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'2'))}}</td>
+                <td *ngIf="bBanCtaCorrDLLS_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'3'))}}</td>
+                <td *ngIf="bBanCtaDocMN_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'6'))}}</td>
+                <td *ngIf="bBanCtaDocORO_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'7'))}}</td>
+                <td *ngIf="bBanCtaDocDLLS_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteSaldos(con.Clientes,'8'))}}</td>
 
-                  <td class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'1'))}}</td>
-                  <td class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'2'))}}</td>
-                  <td class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'6'))}}</td> 
+                <td *ngIf="bBanCtaCorrMN_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'1'))}}</td>
+                <td *ngIf="bBanCtaCorrORO_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'2'))}}</td>
+                <td *ngIf="bBanCtaCorrDLLS_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'3'))}}</td>
+                <td *ngIf="bBanCtaDocMN_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'6'))}}</td> 
+                <td *ngIf="bBanCtaDocORO_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'7'))}}</td> 
+                <td *ngIf="bBanCtaDocDLLS_VEN" class="table-success FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesAgenteVencidos(con.Clientes,'8'))}}</td> 
        
                 <td></td>
                 <td></td>
@@ -203,13 +227,19 @@
               <td></td>
               <td class="FilasFonBold" style="text-align:right">Total general</td>               
   
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'1'))}}</td>
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'2'))}}</td>
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'6'))}}</td>
+              <td *ngIf="bBanCtaCorrMN_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'1'))}}</td>
+              <td *ngIf="bBanCtaCorrORO_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'2'))}}</td>
+              <td *ngIf="bBanCtaCorrDLLS_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'3'))}}</td>
+              <td *ngIf="bBanCtaDocMN_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'6'))}}</td>
+              <td *ngIf="bBanCtaDocORO_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'7'))}}</td>
+              <td *ngIf="bBanCtaDocDLLS_SAL" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralSaldos(oClientesInacRes.Contenido,'8'))}}</td>
 
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'1'))}}</td>
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'2'))}}</td>
-                <td class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'6'))}}</td> 
+              <td *ngIf="bBanCtaCorrMN_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'1'))}}</td>
+              <td *ngIf="bBanCtaCorrORO_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'2'))}}</td>
+              <td *ngIf="bBanCtaCorrDLLS_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'3'))}}</td>
+              <td *ngIf="bBanCtaDocMN_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'6'))}}</td> 
+              <td *ngIf="bBanCtaDocORO_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'7'))}}</td> 
+              <td *ngIf="bBanCtaDocDLLS_VEN" class="FilasFonBold" style="text-align:right">{{ formatoMoneda(getTotalesGeneralVencidos(oClientesInacRes.Contenido,'8'))}}</td> 
      
               <td></td>
               <td></td>
