--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -68,7 +68,7 @@
           <div class="col-lg-12">
             <div class="card">
               <div class="card-body">
-                <h2 style="text-align: center; font-size:xx-large;" >Número {{oBuscar.ClienteCodigo}} {{obtenNombreCliente(oBuscar.ClienteCodigo)}}</h2>
+                <h2 style="text-align: center; font-size:xx-large;" >{{obtenNombreCliente(oBuscar.ClienteCodigo,oBuscar.ClienteFilial)}}</h2>
 
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                   <li [ngbNavItem]="1">
