--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -70,7 +70,7 @@
     </div>  
 
      
-      <div *ngIf="bBandera" class="table-responsive container">  
+      <div *ngIf="bBandera" class="table-responsive anyClass">  
         <!-- <div class="container" >      -->
 
         <br>
@@ -93,7 +93,7 @@
               </div> 
         </div>
 
-    <div class="anyClass" id="pdfTable" #pdfTable>
+    <div  id="pdfTable" #pdfTable>
         <table  class="table table-hover table-striped ">
           <thead>
             <tr class="EncTabla">                 
