--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -362,7 +362,7 @@
 
       </div>
 
-       <div *ngIf="bBandera" class="table-responsive container">
+       <div *ngIf="bBandera" class="table-responsive container anyClass">
         <br>
           <div class="form-row">
             <div class="form-group col-md-1">              
@@ -383,7 +383,7 @@
                 </div> 
           </div>
 
-      <div class="anyClass" id="pdfTable" #pdfTable>
+      <div  id="pdfTable" #pdfTable>
         <table class="table table-hover table-striped">
           <thead >
             <tr class="EncTabla" >
@@ -415,7 +415,28 @@
             <ng-container *ngFor="let relPed of oRelacionPedRes.Contenido | searchrelacionpedidos: searchtext ">
               <tr class="table-info">
                 <!-- <td *ngIf="!bCliente" ? colspan="14" :colspan="18">{{relPed.OficinaFonelliNombre}}</td> -->
-                <td colspan="14">{{relPed.OficinaFonelliNombre}}</td> 
+                <td colspan="4">{{relPed.OficinaFonelliNombre}}</td> 
+                <!-- <td *ngIf="!bCliente"></td> 
+                <td ></td> 
+                <td ></td> --> 
+                <td ></td> 
+                <td ></td> 
+                <td *ngIf="!bCliente"></td> 
+                <td ></td> 
+                <td ></td> 
+                <td ></td> 
+                <td ></td> 
+                <td ></td> 
+                <td *ngIf="!bCliente"></td> 
+                <td ></td> 
+                <td ></td> 
+                <td *ngIf="!bCliente"></td> 
+                <td ></td> 
+                <td ></td> 
+                <td *ngIf="!bCliente"></td> 
+                <td ></td> 
+                <td ></td> 
+                <td ></td> 
               </tr>
             <ng-container *ngFor="let tipoPed of relPed.TipoPedido;">
 
