--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -362,7 +362,7 @@
 
       </div>
 
-       <div *ngIf="bBandera" class="table-responsive container anyClass">
+       <div *ngIf="bBandera" class="table-responsive anyClass">
         <br>
           <div class="form-row">
             <div class="form-group col-md-1">              
